--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,70 @@
+header {
+  padding: 10px 0;
+}
 
+.container {
+  max-width: 1240px;
+  width: 95%;
+  margin: 0 auto;
+  /* border: 2px solid red; */
+}
+
+.divflx {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.logo {
+  display: inline-block;
+}
+
+li a {
+  color: #636060;
+  font-family: Helvetica;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.p-h {
+  padding-right: 50px;
+  vertical-align: top;
+}
+.s-1 {
+  height: 606px;
+  background-image: url("../images/banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.textwrapper h1 {
+  color: #fff;
+  font-family: Helvetica;
+  font-size: 79px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-align: center;
+  margin-bottom: 31px;
+}
+.textwrapper h4 {
+  color: #fff;
+  font-family: Helvetica;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+}
