--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ li a {
   border: 2px solid red;
   margin-top: 87px;
   margin-left: 100px;
+  margin-right: 83px;
 }
 .p1 {
   color: #636060;
@@ -105,12 +106,15 @@ li a {
 }
 .cardsdiv {
   display: flex;
+  flex-wrap: wrap;
+  border: 2px solid red;
+  width: 961px;
+  align-items: end;
 }
 .cards {
-  margin-left: 33px;
+  margin-right: 33px;
   width: 286px;
   height: 330px;
-  border: 2px solid red;
 }
 
 .c1 {
